--- a/res/layout/activity_main_menu.xml
+++ b/res/layout/activity_main_menu.xml
@@ -13,12 +13,13 @@
         android:layout_height="1dp"
         android:layout_centerHorizontal="true" />
     
-   <!--  <ImageView
+     <ImageView
       android:id="@+id/banner"
-      android:layout_width="wrap_content"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:src="@drawable/banner"
-      android:contentDescription="@string/app_name"/> -->
+      android:layout_marginBottom="10dp"
+      android:contentDescription="@string/app_name"/> 
 
     <Button
         android:id="@+id/schedulebutton"
@@ -27,9 +28,10 @@
         android:background="#FFFFFFFF"
         android:drawableTop="@drawable/ic_action_paste"
         android:text="@string/schedule_button"
+        android:layout_below="@+id/banner"
         android:layout_toLeftOf="@+id/view"
         android:layout_alignParentLeft="true"
-        android:onClick="openSchedule" />
+        android:onClick="openButton" />
 
     <Button
         android:id="@+id/contactsbutton"
@@ -38,9 +40,10 @@
         android:background="#FFFFFFFF"
         android:drawableTop="@drawable/ic_action_share"
         android:text="@string/contacts_button" 
+        android:layout_below="@+id/banner"
         android:layout_toRightOf="@+id/view"
         android:layout_alignParentRight="true"
-        android:onClick="openContacts" />
+        android:onClick="openButton" />
     
     <Button
         android:id="@+id/websitebutton"
@@ -53,7 +56,7 @@
         android:layout_marginTop="5dp"
         android:layout_below="@+id/schedulebutton"
         android:layout_alignParentLeft="true"
-        android:onClick="goToNCRCWebsite" />
+        android:onClick="openButton" />
     
     <Button
         android:id="@+id/mapbutton"
@@ -66,9 +69,20 @@
         android:layout_below="@+id/contactsbutton"
         android:layout_toRightOf="@+id/view"
         android:layout_alignParentRight="true"
-        android:onClick="openMap" />
+        android:onClick="openButton" />
     
-
+    <Button
+        android:id="@+id/facebookbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFFFF"
+        android:drawableTop="@drawable/ic_action_person"
+        android:text="@string/facebook_button"
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/websitebutton"
+        android:layout_toRightOf="@+id/view"
+        android:layout_alignParentRight="true"
+        android:onClick="openButton" />
     
 
 </RelativeLayout>
