--- a/res/layout/grid_item.xml
+++ b/res/layout/grid_item.xml
@@ -5,23 +5,25 @@
     android:orientation="vertical"
     android:background="#FFFFFF"
     android:padding="4dp">
-
+    
+    <FrameLayout 
+        android:id="@+id/grid_item_holder"
+        android:layout_width="100dp"
+        android:layout_height="100dp">
+        <ImageView
+            android:id="@+id/grid_item_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="top"
+            android:src="@drawable/sample_0"
+            android:scaleType="centerCrop"/>
+    </FrameLayout>   
+     
     <TextView
-        android:id="@+id/label"
+        android:id="@+id/grid_item_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="label"
         android:layout_gravity="center_horizontal"/>
-    <FrameLayout 
-        android:id="@+id/holder"
-        android:layout_width="100dp"
-        android:layout_height="100dp">
-
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"/>
-    </FrameLayout>    
 
 </LinearLayout>
