--- a/res/layout/activity_schedule.xml
+++ b/res/layout/activity_schedule.xml
@@ -31,7 +31,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="8:00-9:00\t\tRegistration\n \t Northwest Labs Room 12345" 
+        android:text="8:00-9:00\t\tRegistration\n \t Northwest Labs Atrium" 
         android:textColor = "#000000"
         android:layout_marginBottom="@dimen/schedule_margin"
         android:layout_marginTop="@dimen/schedule_margin"
@@ -40,7 +40,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="9:00-10:00\t\tRegistration and Breakfast\n \t Northwest Labs Room 12345"
+        android:text="9:00-10:00\t\tRegistration and Breakfast\n \t Northwest Labs Atrium"
         android:textColor = "#000000"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
@@ -54,7 +54,7 @@
         android:layout_height="wrap_content"
         android:background="#FFFFFFFF"
         android:gravity="left"
-        android:text="10:00-11:00\t\tWelcome and Keynote\n \t Northwest Labs Room 12345"
+        android:text="10:00-11:00\t\tOpening:  Marcia McNutt\n \t Northwest Labs Atrium"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
         android:textSize="@dimen/font_size" 
@@ -79,13 +79,84 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="12:30-1:30\t\tLunch\n \t Northwest Labs Room 12345"
+        android:text="12:30-1:30\t\tLunch\n \t Northwest Labs Atrium"
         android:textColor = "#000000"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
         android:textSize = "@dimen/font_size"  />
     
-
+    <Button
+        android:id="@+id/keynote_button_2"
+        android:minHeight="0dp" 
+        android:minWidth="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFFFF"
+        android:gravity="left"
+        android:text="1:30-2:30\t\tKeynote:  Jack Szostak\n \t Northwest Labs Atrium"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize="@dimen/font_size" 
+        android:textStyle="italic"
+        android:onClick="openDetails"/>
+    
+     <Button
+        android:id="@+id/plenary_button_1"
+        android:minHeight="0dp" 
+        android:minWidth="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFFFF"
+        android:gravity="left"
+        android:text="2:30-3:30\t\tPlenary Session I+II\n \t Northwest Labs Room 12345"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize="@dimen/font_size" 
+        android:textStyle="italic"
+        android:onClick="openDetails"/>   
+    
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="3:30-3:45\t\tCoffee Break\n \t Northwest Labs Room 12345"
+        android:textColor = "#000000"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize = "@dimen/font_size"  />
+    
+     <Button
+        android:id="@+id/plenary_button_2"
+        android:minHeight="0dp" 
+        android:minWidth="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFFFF"
+        android:gravity="left"
+        android:text="3:45-4:45\t\tPlenary Session III+IV\n \t Northwest Labs Room 12345"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize="@dimen/font_size" 
+        android:textStyle="italic"
+        android:onClick="openDetails"/>    
+        
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="4:45-6:15\t\tCareer Fair\n \t Northwest Labs Atrium"
+        android:textColor = "#000000"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize = "@dimen/font_size"  />     
+        
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="6:30-10:00\t\tBoston and Harvard Tours\n \t Northwest Labs Room 12345"
+        android:textColor = "#000000"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize = "@dimen/font_size"  />       
+     
                     
      <TextView
         android:id="@+id/friday_text"
@@ -98,8 +169,178 @@
         android:layout_marginTop="@dimen/schedule_margin"
         android:textSize = "@dimen/weekday_font_size"
         android:textStyle = "bold"/>
-
      
+         <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="9:00-10:00\t\tBreakfast\n \t Northwest Labs Room 12345"
+        android:textColor = "#000000"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize = "@dimen/font_size"  />
+
+        <Button
+        android:id="@+id/keynote_button_3"
+        android:minHeight="0dp" 
+        android:minWidth="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFFFF"
+        android:gravity="left"
+        android:text="10:00-11:00\t\tKeynote:  Temple Grandin\n \t Northwest Labs Atrium"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize="@dimen/font_size" 
+        android:textStyle="italic"
+        android:onClick="openDetails"/>
+        
+        <Button
+        android:id="@+id/workshops_button_1"
+        android:minHeight="0dp" 
+        android:minWidth="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFFFF"
+        android:gravity="left"
+        android:text="11:00-12:00\t\tWorkshops and Panels I\n \t Northwest Labs Room 12345"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize="@dimen/font_size" 
+        android:textStyle="italic"
+        android:onClick="openDetails"/>   
+        
+          <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="12:00-1:00\t\tLunch\n \t Northwest Labs Atrium"
+        android:textColor = "#000000"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize = "@dimen/font_size"  />       
+   
+        <Button
+        android:id="@+id/workshops_button_2"
+        android:minHeight="0dp" 
+        android:minWidth="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFFFF"
+        android:gravity="left"
+        android:text="1:00-2:00\t\tWorkshops and Panels II\n \t Northwest Labs Room 12345"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize="@dimen/font_size" 
+        android:textStyle="italic"
+        android:onClick="openDetails"/>   
+        
+    	<TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="2:00-3:30\t\tTED-style Talks\n \t Northwest Labs Room 12345"
+        android:textColor = "#000000"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize = "@dimen/font_size"  /> 
+        
+                  
+        <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="3:30-4:00\t\tCoffee Break\n \t Northwest Labs Atrium"
+        android:textColor = "#000000"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize = "@dimen/font_size"  />                    
+        
+    <Button
+        android:id="@+id/inno_button_2"
+        android:minHeight="0dp" 
+        android:minWidth="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFFFF"
+        android:gravity="left"
+        android:text="4:00-5:00\t\tInnovation Challenge\n \t Northwest Labs Room 12345"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize="@dimen/font_size"
+        android:textStyle="italic" 
+        android:onClick="openDetails"/>        
+    
+         <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="5:00-6:00\t\tDinner\n \t Northwest Labs Atrium"
+        android:textColor = "#000000"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize = "@dimen/font_size"  />       
+        
+    <Button
+        android:id="@+id/keynote_button_4"
+        android:minHeight="0dp" 
+        android:minWidth="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFFFF"
+        android:gravity="left"
+        android:text="6:00-7:00\t\tKeynote: Robert Langer\n \t Northwest Labs Room 12345"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize="@dimen/font_size"
+        android:textStyle="italic" 
+        android:onClick="openDetails"/>   
+            
+    <Button
+        android:id="@+id/inno_button_3"
+        android:minHeight="0dp" 
+        android:minWidth="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFFFF"
+        android:gravity="left"
+        android:text="7:00-8:00\t\tInnovation Challenge\n \t Northwest Labs Room 12345"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize="@dimen/font_size"
+        android:textStyle="italic" 
+        android:onClick="openDetails"/>    
+        
+    
+        <Button
+        android:id="@+id/inno_button_4"
+        android:minHeight="0dp" 
+        android:minWidth="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFFFF"
+        android:gravity="left"
+        android:text="7:00-8:00\t\tInnovation Presentation\n \t Northwest Labs Room 12345"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize="@dimen/font_size"
+        android:textStyle="italic" 
+        android:onClick="openDetails"/> 
+    
+         <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="8:30-9:00\t\tBreak\n \t Northwest Labs Atrium"
+        android:textColor = "#000000"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize = "@dimen/font_size"  />              
+        
+         <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="9:00-10:00\t\tKaraoke Social\n \t Queen's Head Pub"
+        android:textColor = "#000000"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize = "@dimen/font_size"  />     
+         
+         
     <TextView
         android:id="@+id/saturday_text"
         android:layout_width="match_parent"
@@ -110,7 +351,113 @@
         android:layout_marginBottom="@dimen/schedule_margin"
         android:layout_marginTop="@dimen/schedule_margin"
         android:textSize = "@dimen/weekday_font_size"
-        android:textStyle = "bold"/>
+        android:textStyle = "bold"/>   
+        
+    
+             <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="9:00-10:00\t\tBreakfast\n \t Northwest Labs Atrium"
+        android:textColor = "#000000"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize = "@dimen/font_size"  />   
+        
+        <Button
+        android:id="@+id/keynote_button_5"
+        android:minHeight="0dp" 
+        android:minWidth="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFFFF"
+        android:gravity="left"
+        android:text="10:00-11:00\tKeynote: Matthew Meselson\n \t Northwest Labs Room 12345"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize="@dimen/font_size"
+        android:textStyle="italic" 
+        android:onClick="openDetails"/>
+        
+        
+        <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="11:00-12:30\t\tPoster Session I\n \t Northwest Labs Atrium"
+        android:textColor = "#000000"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize = "@dimen/font_size"  /> 
+             
+        <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="12:30-1:30\t\tLunch\n \t Northwest Labs Atrium"
+        android:textColor = "#000000"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize = "@dimen/font_size"  /> 
+        
+        <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="1:30-3:00\t\tPoster Session II\n \t Northwest Labs Atrium"
+        android:textColor = "#000000"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize = "@dimen/font_size"  />         
+
+        <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="3:00-3:15\t\tCoffee Break\n \t Northwest Labs Atrium"
+        android:textColor = "#000000"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize = "@dimen/font_size"  />      
+        
+        <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="3:15-4:45\t\tPoster Session III\n \t Northwest Labs Atrium"
+        android:textColor = "#000000"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize = "@dimen/font_size"  />  
+                      
+        <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="4:45-5:30\t\tPoster Breakdown\n \t Northwest Labs Atrium"
+        android:textColor = "#000000"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize = "@dimen/font_size"  />   
+
+        <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="5:30-7:30\t\tGala Dinner\n \t Northwest Labs Atrium"
+        android:textColor = "#000000"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize = "@dimen/font_size"  />      
+             
+        <Button
+        android:id="@+id/keynote_button_6"
+        android:minHeight="0dp" 
+        android:minWidth="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFFFF"
+        android:gravity="left"
+        android:text="7:30-8:30\t\tClosing: Donald Pfister\n \t Northwest Labs Room 12345"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:textSize="@dimen/font_size"
+        android:textStyle="italic" 
+        android:onClick="openDetails"/>
+        
+        
 </LinearLayout>
 
 </ScrollView>
