--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="font_size">15sp</dimen>
+    <dimen name="small_font_size">14sp</dimen>
     <dimen name="weekday_font_size">20sp</dimen>
     <dimen name="schedule_margin">5dp</dimen>
 
