Updated bios and innovation challenge

--- a/res/layout/activity_schedule.xml
+++ b/res/layout/activity_schedule.xml
@@ -93,7 +93,7 @@
         android:layout_height="wrap_content"
         android:background="#FFFFFFFF"
         android:gravity="left"
-        android:text="1:30-2:30\t\tKeynote:  Jack Szostak\n \t Northwest Labs Atrium"
+        android:text="1:30-2:30\t\tKeynote:  Meselson\n \t Northwest Labs Atrium"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
         android:textSize="@dimen/font_size" 
@@ -371,7 +371,7 @@
         android:layout_height="wrap_content"
         android:background="#FFFFFFFF"
         android:gravity="left"
-        android:text="10:00-11:00\tKeynote: Matthew Meselson\n \t Northwest Labs Room 12345"
+        android:text="10:00-11:00\t\tKeynote: Jack Szostak \t Northwest Labs Room 12345"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
         android:textSize="@dimen/font_size"
