--- a/res/layout/activity_inno_1.xml
+++ b/res/layout/activity_inno_1.xml
@@ -1,16 +1,28 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="org.hcura.ncrc.Inno_1" >
+    android:id="@+id/schedule_scrollview">
 
+<LinearLayout
+    
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingTop="5dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp">
+    
+    
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/inno_challenge_textview"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:text="@string/hello_world" 
+        android:textColor = "#000000"
+        android:layout_marginBottom="@dimen/schedule_margin"
+        android:layout_marginTop="@dimen/schedule_margin"
+        android:textSize = "@dimen/font_size"/>
 
-</RelativeLayout>
+</LinearLayout>
+
+</ScrollView>
