--- a/res/layout/activity_keynote_5.xml
+++ b/res/layout/activity_keynote_5.xml
@@ -16,7 +16,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/meselson_bio" 
+        android:text="@string/szostak_bio" 
         android:textColor = "#000000"
         android:layout_marginBottom="@dimen/schedule_margin"
         android:layout_marginTop="@dimen/schedule_margin"
