--- a/res/menu/keynote_1.xml
+++ b/res/menu/keynote_1.xml
@@ -1,7 +1,3 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="org.hcura.ncrc.Keynote_1" >
-
-
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 </menu>
