--- a/res/layout/activity_schedule.xml
+++ b/res/layout/activity_schedule.xml
@@ -19,7 +19,7 @@
         android:id="@+id/thursday_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Thursday" 
+        android:text="Thursday, January 22nd" 
         android:gravity="center"
         android:textColor = "#000000"
         android:layout_marginBottom="@dimen/schedule_margin"
@@ -54,7 +54,7 @@
         android:layout_height="wrap_content"
         android:background="#FFFFFFFF"
         android:gravity="left"
-        android:text="10:00-11:00\t\tOpening:  Marcia McNutt\n \t Northwest Labs Atrium"
+        android:text="10:00-11:00\t\tOpening:  Marcia McNutt\n \t Northwest Labs B103"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
         android:textSize="@dimen/font_size" 
@@ -69,7 +69,7 @@
         android:layout_height="wrap_content"
         android:background="#FFFFFFFF"
         android:gravity="left"
-        android:text="11:00-12:30\t\tInnovation Challenge\n \t Northwest Labs Room 12345"
+        android:text="11:05-12:30\t\tInnovation Challenge\n \t Northwest Labs Atrium"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
         android:textSize="@dimen/font_size"
@@ -93,7 +93,7 @@
         android:layout_height="wrap_content"
         android:background="#FFFFFFFF"
         android:gravity="left"
-        android:text="1:30-2:30\t\tPlenary Session I+II\n \t Northwest Labs Room 12345"
+        android:text="1:35-2:30\t\tPlenary Session I+II\n \t Northwest Labs"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
         android:textSize="@dimen/font_size" 
@@ -109,7 +109,7 @@
         android:layout_height="wrap_content"
         android:background="#FFFFFFFF"
         android:gravity="left"
-        android:text="2:30-3:30\t\tPlenary Session III+IV\n \t Northwest Labs Room 12345"
+        android:text="2:35-3:25\t\tPlenary Session III+IV\n \t Northwest Labs"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
         android:textSize="@dimen/font_size" 
@@ -124,7 +124,7 @@
         android:layout_height="wrap_content"
         android:background="#FFFFFFFF"
         android:gravity="left"
-        android:text="3:30-4:30\t\tKeynote:  Meselson\n \t Northwest Labs Atrium"
+        android:text="3:30-4:30\t\tKeynote:  Meselson\n \t Northwest Labs B103"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
         android:textSize="@dimen/font_size" 
@@ -134,7 +134,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="4:30-6:00\t\tCareer Fair\n \t Northwest Labs Atrium"
+        android:text="4:35-6:20\t\tCareer Fair\n \t Northwest Labs B101, B103"
         android:textColor = "#000000"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
@@ -143,7 +143,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="6:00-10:00\t\tBoston and Harvard Tours\n \t Northwest Labs Room 12345"
+        android:text="6:30-10:00\t\tBoston and Harvard Tours\n \t Northwest Labs"
         android:textColor = "#000000"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
@@ -154,7 +154,7 @@
         android:id="@+id/friday_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Friday" 
+        android:text="Friday, January 23rd" 
         android:gravity="center"
         android:textColor = "#000000"
         android:layout_marginBottom="@dimen/schedule_margin"
@@ -165,7 +165,7 @@
          <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="9:00-10:00\t\tBreakfast\n \t Northwest Labs Room 12345"
+        android:text="9:00-10:00\t\tBreakfast\n \t Northwest Labs Atrium"
         android:textColor = "#000000"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
@@ -179,7 +179,7 @@
         android:layout_height="wrap_content"
         android:background="#FFFFFFFF"
         android:gravity="left"
-        android:text="10:00-11:00\t\tKeynote:  Temple Grandin\n \t Northwest Labs Atrium"
+        android:text="10:00-11:00\t\tKeynote:  Temple Grandin\n \t Northwest Labs B103"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
         android:textSize="@dimen/font_size" 
@@ -194,7 +194,7 @@
         android:layout_height="wrap_content"
         android:background="#FFFFFFFF"
         android:gravity="left"
-        android:text="11:00-12:00\t\tWorkshops and Panels I\n \t Northwest Labs Room 12345"
+        android:text="11:05-12:00\t\tWorkshops and Panels I\n \t Northwest Labs"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
         android:textSize="@dimen/font_size" 
@@ -218,7 +218,7 @@
         android:layout_height="wrap_content"
         android:background="#FFFFFFFF"
         android:gravity="left"
-        android:text="1:00-2:00\t\tWorkshops and Panels II\n \t Northwest Labs Room 12345"
+        android:text="1:05-2:00\t\tWorkshops and Panels II\n \t Northwest Labs"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
         android:textSize="@dimen/font_size" 
@@ -228,7 +228,7 @@
     	<TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="2:00-3:30\t\tTED-style Talks\n \t Northwest Labs Room 12345"
+        android:text="2:05-3:30\t\tInnovation Talks\n \t Northwest Labs B103"
         android:textColor = "#000000"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
@@ -238,7 +238,7 @@
         <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="3:30-4:00\t\tCoffee Break\n \t Northwest Labs Atrium"
+        android:text="3:35-3:45\t\tCoffee Break\n \t Northwest Labs Atrium"
         android:textColor = "#000000"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
@@ -252,7 +252,7 @@
         android:layout_height="wrap_content"
         android:background="#FFFFFFFF"
         android:gravity="left"
-        android:text="4:00-5:00\t\tInnovation Challenge\n \t Northwest Labs Room 12345"
+        android:text="3:50-4:45\t\tInnovation Challenge\n \t Northwest Labs Atrium"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
         android:textSize="@dimen/font_size"
@@ -262,7 +262,7 @@
          <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="5:00-6:00\t\tDinner\n \t Northwest Labs Atrium"
+        android:text="4:45-6:00\t\tDinner\n \t Northwest Labs Atrium"
         android:textColor = "#000000"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
@@ -276,7 +276,7 @@
         android:layout_height="wrap_content"
         android:background="#FFFFFFFF"
         android:gravity="left"
-        android:text="6:00-7:00\t\tKeynote: Robert Langer\n \t Northwest Labs Room 12345"
+        android:text="6:00-7:00\t\tKeynote: Robert Langer\n \t Northwest Labs B103"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
         android:textSize="@dimen/font_size"
@@ -291,7 +291,7 @@
         android:layout_height="wrap_content"
         android:background="#FFFFFFFF"
         android:gravity="left"
-        android:text="7:00-8:00\t\tInnovation Challenge\n \t Northwest Labs Room 12345"
+        android:text="7:05-8:00\t\tInnovation Challenge\n \t Northwest Labs Atrium"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
         android:textSize="@dimen/font_size"
@@ -307,7 +307,7 @@
         android:layout_height="wrap_content"
         android:background="#FFFFFFFF"
         android:gravity="left"
-        android:text="7:00-8:00\t\tInnovation Presentation\n \t Northwest Labs Room 12345"
+        android:text="8:05-8:30\t\tInnovation Presentation\n \t Northwest Labs Atrium"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
         android:textSize="@dimen/font_size"
@@ -317,7 +317,7 @@
          <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="8:30-9:00\t\tBreak\n \t Northwest Labs Atrium"
+        android:text="8:30-9:00\t\tBreak\n \t Northwest Labs"
         android:textColor = "#000000"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
@@ -337,7 +337,7 @@
         android:id="@+id/saturday_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Saturday" 
+        android:text="Saturday, January 24th" 
         android:gravity="center"
         android:textColor = "#000000"
         android:layout_marginBottom="@dimen/schedule_margin"
@@ -363,7 +363,7 @@
         android:layout_height="wrap_content"
         android:background="#FFFFFFFF"
         android:gravity="left"
-        android:text="10:00-11:00\t\tKeynote: Jack Szostak \t Northwest Labs Room 12345"
+        android:text="10:00-11:00\t\tKeynote: Jack Szostak \t Northwest Labs B103"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
         android:textSize="@dimen/font_size"
@@ -374,7 +374,7 @@
         <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="11:00-12:30\t\tPoster Session I\n \t Northwest Labs Atrium"
+        android:text="11:00-12:25\t\tPoster Session I\n \t Northwest Labs Atrium"
         android:textColor = "#000000"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
@@ -383,7 +383,7 @@
         <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="12:30-1:30\t\tLunch\n \t Northwest Labs Atrium"
+        android:text="12:30-1:25\t\tLunch\n \t Northwest Labs Atrium"
         android:textColor = "#000000"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
@@ -392,7 +392,7 @@
         <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="1:30-3:00\t\tPoster Session II\n \t Northwest Labs Atrium"
+        android:text="1:30-2:55\t\tPoster Session II\n \t Northwest Labs Atrium"
         android:textColor = "#000000"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
@@ -442,7 +442,7 @@
         android:layout_height="wrap_content"
         android:background="#FFFFFFFF"
         android:gravity="left"
-        android:text="7:30-8:30\t\tClosing: Donald Pfister\n \t Northwest Labs Room 12345"
+        android:text="7:30-8:30\t\tClosing: Donald Pfister\n \t Northwest Labs Atrium"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
         android:textSize="@dimen/font_size"
