--- a/res/layout/activity_schedule.xml
+++ b/res/layout/activity_schedule.xml
@@ -130,16 +130,22 @@
         android:textSize="@dimen/font_size" 
         android:textStyle="italic"
         android:onClick="openDetails"/>
-        
-    <TextView
+    
+    <Button
+        android:id="@+id/career_fair_button"
+        android:minHeight="0dp" 
+        android:minWidth="0dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#FFFFFFFF"
+        android:gravity="left"
         android:text="4:35-6:20\t\tCareer Fair\n \t Northwest Labs B101, B103"
-        android:textColor = "#000000"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
-        android:textSize = "@dimen/font_size"  />     
-        
+        android:textSize="@dimen/font_size" 
+        android:textStyle="italic"
+        android:onClick="openDetails"/>        
+ 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
