--- a/res/layout/activity_schedule.xml
+++ b/res/layout/activity_schedule.xml
@@ -139,7 +139,7 @@
         android:layout_height="wrap_content"
         android:background="#FFFFFFFF"
         android:gravity="left"
-        android:text="4:35-6:20\t\tCareer Fair\n \t Northwest Labs B101, B103"
+        android:text="4:35-6:20\t\tCareer Fair\n \t Northwest Labs"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
         android:textSize="@dimen/font_size" 
@@ -244,7 +244,7 @@
         <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="3:35-3:45\t\tCoffee Break\n \t Northwest Labs Atrium"
+        android:text="3:35-3:45\t\tBreak\n \t Northwest Labs Atrium"
         android:textColor = "#000000"
         android:layout_marginTop="@dimen/schedule_margin"
         android:layout_marginBottom="@dimen/schedule_margin"
