improved menu look

--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="16dp"
+    android:paddingTop="0dp"
     android:paddingBottom="16dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
@@ -18,8 +18,8 @@
       android:id="@+id/banner"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:src="@drawable/banner"
-      android:layout_marginBottom="10dp"
+      android:src="@drawable/banner2"
+      android:layout_marginBottom="0dp"
       android:contentDescription="@string/app_name"/> 
 
     <Button
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#ffffffff"
-        android:drawableTop="@drawable/ic_action_paste"
+        android:drawableTop="@drawable/ic_action_schedule"
         android:text="@string/schedule_button"
         android:layout_below="@+id/banner"
         android:layout_toLeftOf="@+id/view"
@@ -39,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#ffffffff"
-        android:drawableTop="@drawable/ic_action_share"
+        android:drawableTop="@drawable/ic_action_contacts"
         android:text="@string/contacts_button" 
         android:layout_below="@+id/banner"
         android:layout_toRightOf="@+id/view"
@@ -51,10 +51,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#ffffffff"
-        android:drawableTop="@drawable/ic_action_computer"
+        android:drawableTop="@drawable/ic_action_website"
         android:text="@string/website_button"
         android:layout_toLeftOf="@+id/view"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:layout_below="@+id/schedulebutton"
         android:layout_alignParentLeft="true"
         android:onClick="openButton" />
@@ -64,9 +64,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#ffffffff"
-        android:drawableTop="@drawable/ic_action_map"
+        android:drawableTop="@drawable/ic_action_gmap"
         android:text="@string/map_button"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:layout_below="@+id/contactsbutton"
         android:layout_toRightOf="@+id/view"
         android:layout_alignParentRight="true"
@@ -78,10 +78,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#ffffffff"
-        android:drawableTop="@drawable/ic_action_upload"
+        android:drawableTop="@drawable/ic_action_updates"
         android:text="@string/updates_button"
         android:layout_toLeftOf="@+id/view"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:layout_below="@+id/websitebutton"
         android:layout_alignParentLeft="true"
         android:onClick="openButton" />
@@ -91,9 +91,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#ffffffff"
-        android:drawableTop="@drawable/ic_action_place"
+        android:drawableTop="@drawable/ic_action_floor"
         android:text="@string/floor_button"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:layout_below="@+id/mapbutton"
         android:layout_toRightOf="@+id/view"
         android:layout_alignParentRight="true"
